--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -24,7 +24,7 @@
     <h1 id=""><center>PAVITS: Exploring Prosody-aware VITS for End-to-End Emotional Voice Conversion</center></h1>
     <!-- <center> Tianhua Qi<sup>1,2</sup>, Wenming Zheng<sup>1,2*</sup>, Cheng Lu<sup>1,2</sup>, Yuan Zong<sup>1,2</sup>, Hailun Lian<sup>1,3</sup></center>
     <center> <sup>1</sup> Key Laboratory of Child Development and Learning Science (Southeast University), Ministry of Education, Nanjing 210096, China</center>
-    <center> <sup>2</sup> School of Biological Science and Medical Engineering, Southeast University, China</center> -->
+    <center> <sup>2</sup> School of Biological Science and Medical Engineering, Southeast University, China</center>
     <center> <sup>3</sup> School of Information Science and Engineering, Southeast University, China</center> -->
 
 
