--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -156,7 +156,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 
 <h3>Visualization of synthesized waveform.<a name="Visualization"></a></h2>
 
-  <center><img src='fig/spec.png' width=600px></center>
+  <center><img src='fig/spec.jpg' width=600px></center>
   <table>
     <tbody>
       <tr>
