--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -41,13 +41,11 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
   <tbody>
     <tr>
         <!-- <td style="text-align: center; width: 100px;" rowspan=1><strong>model<strong></td> -->
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>Recording 22k<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>cpopsing 22k<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>VISinger1 22k<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>VISinger2 22k<strong></td>
-          <td style="text-align: center; width: 100px;" rowspan=1><strong>Recording 44k<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>RefineSinger 44k<strong></td>
-        <td style="text-align: center; width: 100px;" rowspan=1><strong>VISinger2 44k<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>CycleGAN-EVC<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>StarGAN-EVC<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>VITS<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-FL<strong></td>
+          <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-VL<strong></td>
     </tr>
 
     <tr>
