--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -37,7 +37,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 
 <h2>2. Experimental Results<a name="exp result"></a></h2>
 
-<table>
+<table><center>
   <tbody>
     <tr>
         <!-- <td style="text-align: center; width: 100px;" rowspan=1><strong>model<strong></td> -->
@@ -128,7 +128,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2100003749.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2100003749.wav"></audio></td>
     </tr>
-    </tbody>
+    </tbody></center>
 </table>
 
 
