--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -41,11 +41,13 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
   <tbody>
     <tr>
         <!-- <td style="text-align: center; width: 100px;" rowspan=1><strong>model<strong></td> -->
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Source<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>CycleGAN-EVC<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>StarGAN-EVC<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>VITS<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-FL<strong></td>
-          <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-VL<strong></td>
+        <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-VL<strong></td>
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Target<strong></td>
     </tr>
 
     <tr>
