--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -57,6 +57,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
         <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2044001628.wav"></audio></td>
         <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2044001628.wav"></audio></td>
         <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2044001628.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2044001629<strong></td> -->
@@ -65,6 +67,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2044001629.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2044001629.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2044001629.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2086003176<strong></td> -->
@@ -73,6 +77,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2086003176.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2086003176.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2086003176.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2086003177<strong></td> -->
@@ -81,6 +87,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2086003177.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2086003177.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2086003177.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -89,6 +97,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2092003412.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2092003412.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2092003412.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -97,6 +107,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2092003413.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2092003413.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2092003413.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -105,6 +117,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2093003457.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2093003457.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2093003457.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -113,6 +127,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2093003458.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2093003458.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2093003458.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -121,6 +137,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003748.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2100003748.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2100003748.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -129,6 +147,8 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2100003749.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2100003749.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2100003749.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
     </tr>
     </tbody>
 </table></center>
