--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -37,7 +37,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 
 <h2>2. Experimental Results (Uploading)<a name="exp result"></a></h2>
 
-<center><table>
+<table{margin: 0 auto}>
   <tbody>
     <tr>
         <!-- <td style="text-align: center; width: 100px;" rowspan=1><strong>model<strong></td> -->
@@ -267,7 +267,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
     </tr>
 		
     </tbody>
-</table></center>
+</table>
 
 
 <h3>Visualization of synthesized waveform.<a name="Visualization"></a></h2>
