--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -37,7 +37,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 
 <h2>2. Experimental Results (Uploading)<a name="exp result"></a></h2>
 
-<table{margin: 0 auto}>
+<table>
   <tbody>
     <tr>
         <!-- <td style="text-align: center; width: 100px;" rowspan=1><strong>model<strong></td> -->
