--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -48,10 +48,11 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-FL<strong></td>
         <td style="text-align: center; width: 100px;" rowspan=1><strong>PAVITS-VL<strong></td>
 	<td style="text-align: center; width: 100px;" rowspan=1><strong>Target<strong></td>
+	<td style="text-align: center; width: 100px;" rowspan=1><strong>Text<strong></td>
     </tr>
 		
     <tr>
-	    <th colspan=7 style="font-size:80%" centering><h8>Neutral-to-Angry</th>
+	    <th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Angry</th>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2044001628<strong></td> -->
@@ -106,7 +107,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
     </tr>
 		
     <tr>
-    	<th colspan=7 style="font-size:80%" centering><h8>Neutral-to-Happy</th>
+    	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Happy</th>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -160,7 +161,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
     </tr>
 		
     <tr>
-    	<th colspan=7 style="font-size:80%" centering><h8>Neutral-to-Sad</th>
+    	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Sad</th>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -214,7 +215,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
     </tr>
 		
     <tr>
-    	<th colspan=7 style="font-size:80%" centering><h8>Neutral-to-Surprise</th>
+    	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Surprise</th>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
