--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -72,8 +72,9 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2044001629.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2044001629.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2044001629.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2086003176<strong></td> -->
@@ -82,8 +83,9 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2086003176.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2086003176.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2086003176.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="font-size:95%">我老家在北京。(English: My hometown is in Beijing.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2086003177<strong></td> -->
@@ -92,8 +94,9 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2086003177.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2086003177.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2086003177.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="font-size:95%">妇女节快乐，我永远爱你，妈妈。(English: Happy Women's Day, I will always love you, Mom.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -102,8 +105,9 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger1_22k_2092003412.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/visinger2_22k_2092003412.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_44k_2092003412.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
-	    <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="sample/record_22k_2044001628.wav"></audio></td>
+	  <td style="font-size:95%">你每次谈恋爱都像现在这样。(English: Every time you fall in love, it's just like this.)</td>
     </tr>
 		
     <tr>
