--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -294,6 +294,9 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
 
 
 <h3>Visualization of synthesized waveform.<a name="Visualization"></a></h2>
+<p> 
+To further show the effectiveness of our method, we visualize the spectrogram of testing clips (Neutral-Happy). From top to bottom are ground truth, converted by original VITS, and proposed PAVITS. It is readily apparent that the spectrogram converted by PAVITS exhibits finer details in prosody variations within the pertinent frequency bands, while simultaneously preserving descriptive information for other frequency bands.
+ </p>
 
   <center><img src='fig/spec.jpg' width=800px></center>
 
