--- a/pavits4EVC/index.html
+++ b/pavits4EVC/index.html
@@ -76,7 +76,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_fl_0009_000352.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_vl_0009_000352.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000352.wav"></audio></td>
-	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>2086003176<strong></td> -->
@@ -135,7 +135,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_fl_0009_000702.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_vl_0009_000702.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000702.wav"></audio></td>
-	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -194,7 +194,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/pavits_fl_0009_001052.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/pavits_vl_0009_001052.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001052.wav"></audio></td>
-	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
@@ -253,7 +253,7 @@ In this paper, we propose Prosody-aware VITS (PAVITS) for emotional voice conver
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_fl_0009_001402.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_vl_0009_001402.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001402.wav"></audio></td>
-	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
     </tr>
     <tr>
         <!-- <td style="text-align: center; width: 150px;" rowspan=1><strong>Audio<strong></td> -->
